--- a/test.html
+++ b/test.html
@@ -20,9 +20,9 @@
                 </div>
                 <div class="hidden md:block">
                     <a href="#" class="text-gray-300 hover:text-white px-4">Home</a>
-                    <a href="#" class="text-gray-300 hover:text-white px-4">About</a>
-                    <a href="#" class="text-gray-300 hover:text-white px-4">Services</a>
-                    <a href="#" class="text-gray-300 hover:text-white px-4">Contact</a>
+                    <a href="#" class="text-gray-300 hover:text-white px-4">Message</a>
+                    <a href="#" class="text-gray-300 hover:text-white px-4">Notification</a>
+                    <a href="#" class="text-gray-300 hover:text-white px-4">Blog</a>
                 </div>
                 <div class="relative md:ml-4 flex gap-5">
                     <input type="text"
@@ -67,7 +67,8 @@
                             media!</p>
                     </div>
                 </div>
-                <div class="card p-6 my-8 bg-white ">
+
+                <div class="card p-6 my-8 bg-white shadow-xl">
                     <h4 class="text-xl font-bold pb-4">Page you may like</h4>
                     <div>
                         <ul>
@@ -235,7 +236,7 @@
                             infancy.</p>
                     </div>
                     <figure>
-                        <img src="./src/convo-5.jpg" alt="Shoes"
+                        <img src="./src/job.jpg" alt="Shoes"
                             class="w-full h-full rounded-xl object-cover">
                     </figure>
                     <div class="flex items-center justify-between mt-4">
@@ -274,7 +275,7 @@
                             infancy.</p>
                     </div>
                     <figure>
-                        <img src="./src/diu.convo1.jpg" alt="Shoes"
+                        <img src="./src/convo-5.jpg" alt="Shoes"
                             class="w-full h-full rounded-xl object-cover">
                     </figure>
                     <div class="flex items-center justify-between mt-4">
@@ -346,11 +347,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-white rounded-lg shadow-lg p-6 my-8">
+                <div class="bg-white lg:w-[270px]  shadow-lg p-6 my-8">
                     <h4 class="text-lg font-bold mb-4">Advertizement</h4> 
                     <div class="mt-4">
                         <a href="#" class="block">
-                            <img src="./src/advertise.webp" alt="advertisement" class="w-full h-auto">
+                            <img src="./src/add-2.jpg" alt="advertisement" class="w-full h-auto rounded">
                         </a>
                     </div>
                 </div>
